Исправление ошибок для защиты (#12)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -49,9 +49,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link catalog__image-link--margin" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-chicken500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-chicken500-desktop@2x.png 2x" type="image/png" width="161" height="172">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-chicken500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-chicken500-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-chicken500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-chicken500-mobile@2x.png 2x" width="68" height="86" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-chicken500-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-chicken500-desktop@2x.webp 2x" type="image/webp" width="161" height="172">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-chicken500-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-chicken500-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-chicken500-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-chicken500-mobile@2x.webp 2x" width="68" height="86" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -72,9 +72,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-chicken1000-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-chicken1000-desktop@2x.png 2x" type="image/png" width="169" height="196">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-chicken1000-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-chicken1000-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-chicken1000-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-chicken1000-mobile@2x.png 2x" width="84" height="100" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-chicken1000-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-chicken1000-desktop@2x.webp 2x" type="image/webp" width="169" height="196">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-chicken1000-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-chicken1000-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-chicken1000-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-chicken1000-mobile@2x.webp 2x" width="84" height="100" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -95,9 +95,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link catalog__image-link--margin" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-fish500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-fish500-desktop@2x.png 2x" type="image/png" width="161" height="172">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-fish500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-fish500-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-fish500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-fish500-mobile@2x.png 2x" width="68" height="86" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-fish500-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-fish500-desktop@2x.webp 2x" type="image/webp" width="161" height="172">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-fish500-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-fish500-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-fish500-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-fish500-mobile@2x.webp 2x" width="68" height="86" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -119,9 +119,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-fish1000-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-fish1000-desktop@2x.png  2x" type="image/png" width="169" height="196">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-fish1000-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-fish1000-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-fish1000-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-fish1000-mobile@2x.png 2x" width="84" height="100" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-fish1000-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-fish1000-desktop@2x.webp  2x" type="image/webp" width="169" height="196">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-fish1000-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-fish1000-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-fish1000-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-fish1000-mobile@2x.webp 2x" width="84" height="100" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -143,9 +143,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link catalog__image-link--margin" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-buckwheat500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-buckwheat500-desktop@2x.png 2x" type="image/png" width="161" height="172">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-buckwheat500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-buckwheat500-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-buckwheat500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-buckwheat500-mobile@2x.png 2x" width="68" height="86" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-buckwheat500-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-buckwheat500-desktop@2x.webp 2x" type="image/webp" width="161" height="172">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-buckwheat500-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-buckwheat500-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-buckwheat500-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-buckwheat500-mobile@2x.webp 2x" width="68" height="86" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -167,9 +167,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-buckwheat1000-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-buckwheat1000-desktop@2x.png 2x" type="image/png" width="169" height="196">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-buckwheat1000-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-buckwheat1000-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-buckwheat1000-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-buckwheat1000-mobile@2x.png 2x" width="84" height="100" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-buckwheat1000-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-buckwheat1000-desktop@2x.webp 2x" type="image/webp" width="169" height="196">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-buckwheat1000-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-buckwheat1000-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-buckwheat1000-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-buckwheat1000-mobile@2x.webp 2x" width="84" height="100" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -191,9 +191,9 @@
           <article class="catalog__item">
             <a class="catalog__image-link catalog__image-link--margin" href="product.html">
               <picture>
-                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-rise500-desktop@1x.png 1x, images/catalog-images/catalog-desktop/catalog-rise500-desktop@2x.png 2x" type="image/png" width="161" height="172">
-                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-rise500-tablet@1x.png 1x, images/catalog-images/catalog-tablet/catalog-rise500-tablet@2x.png 2x" type="image/png" width="200" height="210">
-                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-rice500-mobile@1x.png" srcset="images/catalog-images/catalog-mobile/catalog-rice500-mobile@2x.png 2x" width="68" height="86" alt="Кошачья еда в банке.">
+                <source media="(min-width: 1440px)" srcset="images/catalog-images/catalog-desktop/catalog-rise500-desktop@1x.webp 1x, images/catalog-images/catalog-desktop/catalog-rise500-desktop@2x.webp 2x" type="image/webp" width="161" height="172">
+                <source media="(min-width: 768px)" srcset="images/catalog-images/catalog-tablet/catalog-rise500-tablet@1x.webp 1x, images/catalog-images/catalog-tablet/catalog-rise500-tablet@2x.webp 2x" type="image/webp" width="200" height="210">
+                <img class="catalog__item-image" src="images/catalog-images/catalog-mobile/catalog-rice500-mobile@1x.webp" srcset="images/catalog-images/catalog-mobile/catalog-rice500-mobile@2x.webp 2x" width="68" height="86" alt="Кошачья еда в банке.">
               </picture>
             </a>
             <a class="catalog__title-link" href="product.html">
@@ -293,9 +293,9 @@
           </div>
         </div>
         <picture class="map__image">
-          <source width="1220" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png, images/location-desktop@2x.png 2x">
-          <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png, images/location-tablet@2x.png 2x">
-          <img src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
+          <source width="1220" height="400" type="image/webp" media="(min-width: 1280px)" srcset="images/location-desktop@1x.webp, images/location-desktop@2x.webp 2x">
+          <source width="768" height="400" type="image/webp" media="(min-width: 768px)" srcset="images/location-tablet@1x.webp, images/location-tablet@2x.webp 2x">
+          <img src="images/location-mobile@1x.webp" srcset="images/location-mobile@2x.webp 2x" alt="Мы на карте" width="320" height="362">
         </picture>
         <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A2895c96e2f1a8feac164e56df0adafb1c69e2a571d6e4a2fef786ed781cccdd6&amp;source=constructor"></iframe>
       </div>
