--- a/source/index.html
+++ b/source/index.html
@@ -48,9 +48,9 @@
             питание для котов</h1>
           <p class="promo__description">Занялся собой? Займись котом!</p>
           <picture class="promo__image">
-            <source media="(min-width: 1440px)" width="552" height="499" type="image/png" srcset="images/index-images/index-desktop/promo-desktop@1x.png 1x, images/index-images/index-desktop/promo-desktop@2x.png 2x">
-            <source media="(min-width: 768px)" width="709" height="609" type="image/png" srcset="images/index-images/index-tablet/promo-tablet@1x.png 1x, images/index-images/index-tablet/promo-tablet@2x.png 2x">
-            <img class="promo__image" src="images/index-images/index-mobile/promo-mobile@1x.png" srcset="images/index-images/index-mobile/promo-mobile@2x.png 2x" width="280" height="270" alt="Полезная еда для котов.">
+            <source media="(min-width: 1440px)" width="552" height="499" type="image/webp" srcset="images/index-images/index-desktop/promo-desktop@1x.webp 1x, images/index-images/index-desktop/promo-desktop@2x.webp 2x">
+            <source media="(min-width: 768px)" width="709" height="609" type="image/webp" srcset="images/index-images/index-tablet/promo-tablet@1x.webp 1x, images/index-images/index-tablet/promo-tablet@2x.webp 2x">
+            <img class="promo__image" src="images/index-images/index-mobile/promo-mobile@1x.webp" srcset="images/index-images/index-mobile/promo-mobile@2x.webp 2x" width="280" height="270" alt="Полезная еда для котов.">
           </picture>
           <a class="button button--margin button--grid button--padding" href="program.html">Подобрать программу</a>
         </div>
@@ -110,14 +110,14 @@
           <ul class="slider__list">
             <li class="slider__item slider__item--before">
               <picture class="slider__picture">
-                <source media="(min-width: 768px)" type="image/png" width="560" height="512" srcset="images/index-images/index-tablet/slider-cat-before-tablet@1x.png 1x, images/index-images/index-tablet/slider-cat-before-tablet@2x.png 2x">
-                <img class="slider__item-image" src="images/index-images/index-mobile/slider-cat-before-mobile@1x.png" srcset="images/index-images/index-mobile/slider-cat-before-mobile@2x.png" width="280" height="256" alt="Фотография упитанного кота.">
+                <source media="(min-width: 768px)" type="image/webp" width="560" height="512" srcset="images/index-images/index-tablet/slider-cat-before-tablet@1x.webp 1x, images/index-images/index-tablet/slider-cat-before-tablet@2x.webp 2x">
+                <img class="slider__item-image" src="images/index-images/index-mobile/slider-cat-before-mobile@1x.webp" srcset="images/index-images/index-mobile/slider-cat-before-mobile@2x.webp" width="280" height="256" alt="Фотография упитанного кота.">
               </picture>
             </li>
             <li class="slider__item slider__item--after">
               <picture>
-                <source media="(min-width: 768px)" type="image/png" width="560" height="512" srcset="images/index-images/index-tablet/slider-cat-after-tablet@1x.png 1x, images/index-images/index-tablet/slider-cat-after-tablet@2x.png 2x">
-                <img class="slider__item-image" src="images/index-images/index-mobile/slider-cat-after-mobile@1x.png" srcset="images/index-images/index-mobile/slider-cat-after-mobile@2x.png" width="280" height="256" alt="Фотография худого кота.">
+                <source media="(min-width: 768px)" type="image/webp" width="560" height="512" srcset="images/index-images/index-tablet/slider-cat-after-tablet@1x.webp 1x, images/index-images/index-tablet/slider-cat-after-tablet@2x.webp 2x">
+                <img class="slider__item-image" src="images/index-images/index-mobile/slider-cat-after-mobile@1x.webp" srcset="images/index-images/index-mobile/slider-cat-after-mobile@2x.webp" width="280" height="256" alt="Фотография худого кота.">
               </picture>
             </li>
           </ul>
@@ -145,9 +145,9 @@
           </div>
         </div>
         <picture class="map__image">
-          <source width="1220" height="400" type="image/png" media="(min-width: 1280px)" srcset="images/location-desktop@1x.png, images/location-desktop@2x.png 2x">
-          <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png, images/location-tablet@2x.png 2x">
-          <img src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
+          <source width="1220" height="400" type="image/webp" media="(min-width: 1280px)" srcset="images/location-desktop@1x.webp, images/location-desktop@2x.webp 2x">
+          <source width="768" height="400" type="image/webp" media="(min-width: 768px)" srcset="images/location-tablet@1x.webp, images/location-tablet@2x.webp 2x">
+          <img src="images/location-mobile@1x.webp" srcset="images/location-mobile@2x.webp 2x" alt="Мы на карте" width="320" height="362">
         </picture>
         <iframe class="map__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A2895c96e2f1a8feac164e56df0adafb1c69e2a571d6e4a2fef786ed781cccdd6&amp;source=constructor"></iframe>
       </div>
